--- a/index.html
+++ b/index.html
@@ -20,15 +20,7 @@
     </div>
     <div class="slier-controls">
       <span id="prev" class="prev">Previous</span>
-      <span id="indicators" class="indicators">
-        <ul>
-          <li class="active">1</li>
-          <li>2</li>
-          <li>2</li>
-          <li>4</li>
-          <li>5</li>
-        </ul>
-      </span>
+      <span id="indicators" class="indicators"></span>
       <span id="next" class="next">Next</span>
     </div>
   </body>
