--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="slider-container">
       <div id="slide-number" class="slide-number">Slide #6</div>
-      <img src="./files/img1.jpg" class="active" />
+      <img src="./files/img1.jpg" />
       <img src="./files/img2.jpg" />
       <img src="./files/img3.jpg" />
       <img src="./files/img4.jpg" />
