--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Slider</title>
     <link rel="icon" href="files/color_wheel.png" />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="main.js"></script>
   </head>
   <body>
     <div class="slider-container">
-      <div id="slide-number" class="slide-number">Slide #6</div>
+      <div id="slide-number" class="slide-number"><!--Slide #6--></div>
       <img src="./files/img1.jpg" />
       <img src="./files/img2.jpg" />
       <img src="./files/img3.jpg" />
@@ -23,5 +22,6 @@
       <span id="indicators" class="indicators"></span>
       <span id="next" class="next">Next</span>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
